login window background

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 			left: 0;
 			right: 0;
 			bottom: 0;
-			background-color: black;
+			background: radial-gradient(rgba(235, 235, 235, 1), rgba(210, 210, 210, 1));
 			z-index: 19000;
 			display: none;
 		"></div>
