--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 		<script type="text/javascript" src="index.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800">
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300">
 		<link rel="stylesheet" type="text/css" href="css/ux/ItemSelector.css">
 		<link rel="stylesheet" type="text/css" href="extjs-4.1.3/resources/css/ext-all-gray.css">
 		<link rel="stylesheet" type="text/css" href="css/ux/colorpicker.css">
