--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
 					</div>
 					<div id="top-toolbar">
 						<div id="top-toolbar-features">
-							<div class="item" id="top-toolbar-3dmap">3D Map</div>
+							<div class="item" id="top-toolbar-3dmap"><span>3D Map</span></div>
 							<div id="top-toolbar-widgets"></div>
 						</div>
 						<div id="top-toolbar-tools">
