World wind map functionality refactoring & modularization#initial commit

--- a/public/index.html
+++ b/public/index.html
@@ -585,7 +585,7 @@
             </div>
             <div id="top-toolbar">
                 <div id="top-toolbar-features">
-                    <div class="item" id="top-toolbar-3dmap"><span>3D Map</span></div>
+                    <div class="item open" id="top-toolbar-3dmap"><span>3D Map</span></div>
                     <div id="top-toolbar-widgets"></div>
                 </div>
                 <div id="top-toolbar-tools">
