--- a/public/index.html
+++ b/public/index.html
@@ -589,8 +589,9 @@
                     <div id="top-toolbar-widgets"></div>
                 </div>
                 <div id="top-toolbar-tools">
-                    <a class="item" id="top-toolbar-snapshot" title="Take map snapshot"></a>
+                    <div class="item" id="top-toolbar-add-map" title="Add map"></div>
                     <div class="item" id="top-toolbar-share-view" title="Share view"></div>
+                    <a class="item" id="top-toolbar-snapshot" title="Take map snapshot"></a>
                     <div class="item" id="top-toolbar-context-help" title="Context help"></div>
                 </div>
             </div>
