Move maps-container to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -609,6 +609,13 @@
                 <div id="app-extra-content"></div>
             </div>
         </div>
+        <div class="maps-container" id="maps-container">
+            <div>
+                <div class="map-tools"></div>
+                <div class="map-fields"></div>
+            </div>
+            <div id="maps-container-bar-bottom"></div>
+        </div>
     </div>
     <div id="footer">
         <div id="footer-legal">
