CRA load: render component

--- a/public/index.html
+++ b/public/index.html
@@ -614,7 +614,9 @@
                 <div class="map-tools"></div>
                 <div class="map-fields"></div>
             </div>
-            <div id="maps-container-bar-bottom"></div>
+            <div id="maps-container-bar-bottom">
+                <div id="maps-timeline"></div>
+            </div>
         </div>
     </div>
     <div id="footer">
