Selected map style & map controls position

--- a/public/index.html
+++ b/public/index.html
@@ -610,7 +610,7 @@
             </div>
         </div>
         <div class="maps-container" id="maps-container">
-            <div>
+            <div class="maps-container-top">
                 <div class="map-tools"></div>
                 <div class="map-fields"></div>
             </div>
