Adjust header for specific scope settings

--- a/public/index.html
+++ b/public/index.html
@@ -243,6 +243,7 @@
     </div>
     <div id="header">
         <h1>Data exploration</h1>
+        <div id="header-view-selection"></div>
         <ul class="menu">
             <li id="intro-link"><a href="/">Introduction</a></li>
             <li id="downloads-link"><a href="/intro/index.php/downloads">Downloads</a></li>
