Change review map control component initialization

--- a/public/index.html
+++ b/public/index.html
@@ -523,6 +523,7 @@
                         <div id="app-view-selector-period-compare" class="widget"></div>
                     </div>
                 </div>
+                <div id="view-selector-placeholder"></div>
             </div>
             <div id="legacy-view-selector" class="fields-holder">
                 <div class="label">Data Exploration</div>
