Data upload overlay - initialization

--- a/public/index.html
+++ b/public/index.html
@@ -241,6 +241,7 @@
             <li id="downloads-link"><a href="/intro/index.php/downloads">Downloads</a></li>
             <li id="help-link"><a href="/help-frontoffice/" target="_blank">Help</a></li>
             <li id="bo-link" style="display:none;"><a href="/backoffice/" target="_blank">Administration</a></li>
+            <li id="upload-data"><a href="#">Upload data</a></li>
         </ul>
         <div class="user">
             <a href="#" class="login">LOG IN</a>
@@ -629,6 +630,7 @@
         </div>
     </div>
 </div>
+<div id="app-overlays"></div>
 <div id="loading-mask-shim"></div>
 <div id="loading-mask"></div>
 <div id="loading-screen">
