--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
         <a href="http://www.worldbank.org/"><span>The World Bank</span></a>
     </div>
     <div id="header">
-        <h1>Data exploration</h1>
+        <a id="home-page"><h1>Data exploration</h1></a>
         <div id="header-view-selection"></div>
         <ul class="menu">
             <li id="intro-link"><a href="/">Introduction</a></li>
