Basic floating window

--- a/public/index.html
+++ b/public/index.html
@@ -630,7 +630,7 @@
         </div>
     </div>
 </div>
-<div id="app-overlays"></div>
+<div id="app-container"></div>
 <div id="loading-mask-shim"></div>
 <div id="loading-mask"></div>
 <div id="loading-screen">
