Window docking - basics

--- a/public/index.html
+++ b/public/index.html
@@ -470,7 +470,7 @@
         </div>
         <div class="maps-container" id="maps-container">
             <div class="maps-container-top">
-                <div class="map-tools"></div>
+                <div class="map-tools" id="maps-tools"></div>
                 <div class="map-fields"></div>
             </div>
             <div id="maps-container-bar-bottom">
