Update path to select.

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/components.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/responsive.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/_new/styles/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/styles/select2.min.css">
 
     <script type="text/javascript"
             src="//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false"></script>
