--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,7 @@
             <li id="help-link"><a href="/help-frontoffice/" target="_blank">Help</a></li>
             <li id="bo-link" style="display:none;"><a href="/backoffice/" target="_blank">Administration</a></li>
             <li id="upload-data"><a href="#">Upload data</a></li>
+            <li><a id="scope-selection-switch-container" href="#"></a></li>
         </ul>
         <div class="user">
             <a href="#" class="login">LOG IN</a>
