Handling original scope selection switch & overlay

--- a/public/index.html
+++ b/public/index.html
@@ -107,10 +107,10 @@
             <li id="help-link"><a href="/help-frontoffice/" target="_blank">Help</a></li>
             <li id="bo-link" style="display:none;"><a href="/backoffice/" target="_blank">Administration</a></li>
             <li id="upload-data"><a href="#">Upload data</a></li>
-            <li><a id="scope-selection-switch-container" href="#"></a></li>
+            <li id="scope-selection-switch"><a id="scope-selection-switch-container" href="#"></a></li>
         </ul>
         <div class="user">
-            <a href="#" class="login">LOG IN</a>
+            <a href="#" class="login">LOG INN</a>
             <span class="sep"></span>
             <a href="#" class="signup">SIGN UP</a>
         </div>
