--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/NotesEsaReg.otf">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ux/ItemSelector.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/extjs-4.1.3/resources/css/ext-all-gray.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ux/colorpicker.css">
