Refactoring: Disable handling of the user via old code

--- a/public/index.html
+++ b/public/index.html
@@ -109,10 +109,8 @@
             <li id="upload-data"><a href="#">Upload data</a></li>
             <li id="scope-selection-switch"><a id="scope-selection-switch-container" href="#"></a></li>
         </ul>
-        <div class="user">
-            <a href="#" class="login">LOG INN</a>
-            <span class="sep"></span>
-            <a href="#" class="signup">SIGN UP</a>
+        <div id="user-container">
+
         </div>
     </div>
     <div id="content">
