--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
     <script type="text/javascript" src="%PUBLIC_URL%/lib/polyglot.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/localization.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
 
