Demo: initial commit

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
-
-
+	<div id="ptr"></div>
 </body>
 </html>
