--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 
     <script type="text/javascript" src="%PUBLIC_URL%/lib/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/lib/jquery-tourbus.js"></script>
 
     <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/observer.js"></script>
