--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.jpg" type="image/jpeg">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,36 +19,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Panther</title>
+    <title>VISAT (Urban TEP)</title>
 
     <meta charset="utf-8">
 
-    <script type="text/javascript" src="%PUBLIC_URL%/lib/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/lib/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/lib/jquery-tourbus.js"></script>
-
     <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/observer.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/exchangeParams.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/packaged.js"></script>
 
-    <script type="text/javascript" src="%PUBLIC_URL%/lib/polyglot.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/localization.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/lib/detect-element-resize.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/lib/select2.full.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/packaged.css">
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/NotesEsaReg.otf">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ux/ItemSelector.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/extjs-4.1.3/resources/css/ext-all-gray.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ux/colorpicker.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/extjs-4.1.3/examples/ux/css/CheckHeader.css">
-
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/app.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/toggles.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/extjs-puma.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/layout.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/components.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/responsive.css" media="screen">
 
     <script type="text/javascript"
