--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/packaged.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/packaged.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/packaged.css">
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300">
